--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -52,7 +52,11 @@
 \end{titlepage}
 
 
-% \newpage
+\newpage
+
+\tableofcontents
+
+\newpage
 
 \section{Summary}
 
@@ -101,7 +105,11 @@ if we choose to also incorporate positioning of a sprinkler system.
 
 \newpage
 
-\section{Mathematics}
+\section{Motivation and Introduction (Thone)}
+
+\newpage
+
+\section{Mathematics (jakob se over)}
 
 In this section, we will discuss the mathematical model behind the program.
 
@@ -177,8 +185,34 @@ In this section, we will discuss the mathematical model behind the program.
     \item For each grid cell $(x_g,y_g) \in G$, the average light level across all contained area cells must meet or exceed the minimum requirement
     \item For any two grid points $(x_1,y_1), (x_2,y_2) \in G$ that are closer than the minimum spacing,
     \item We add the constraint that at most one of them can have a fixture
+    \item TODO: add neigh constraint 
 \end{enumerate}
 
+\newpage
 
+\section{Execution}
+\subsection{Method (jakob)}
+\subsection{What we tried: (hanna)}
+
+\newpage
+
+\section{Experiments (TBD)}
+\subsection{Light distribution plot}
+\subsection{Small room}
+\subsection{Large room}
+\subsection{Runtime Discussion}
+
+
+
+\newpage
+
+\section{Discussion (Håvard)}
+
+\subsection{Potential Improvements}
+\subsubsection{Caching}
+
+\newpage
+
+\section{Conclusion (Hermann)}
 
 \end{document}
