--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -122,7 +122,7 @@ with COWI and our academic advisor, to define requirements, develop solutions, a
 
 \newpage
 
-\section{Mathematics (jakob se over)}
+\section{Mathematics}
 
 In this section, we will discuss the mathematical model behind the program.
 
@@ -175,7 +175,7 @@ In this section, we will discuss the mathematical model behind the program.
 In this section we will shine some light on how we chose to solve the main problem – finding the optimal solution via a generic algorithm 
 for placing light fixtures in any room of any size.
 
-\subsection{Method (jakob)}
+\subsection{Method}
 
 As previously mentioned, a genetic algorithm/RL approach was presented to us. Although this can be a good solution in some cases, we found out that
 this method does not provide heuristics that are sufficiently effective or efficient for approximating the optimal solution.
